Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19220

Picture Viewer : incorrectly renders 1x1 images

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell
    • None

    Description

      reactos-bootcd-0.4.15-dev-6725-ge685b25-x86-gcc-lin-dbg

      • Create a 1x1 single pixel image with paint, save it as PNG or BMP
      • Open with Picture viewer and zoom
      • Incorrect rendering

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: